--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -14,4 +14,8 @@
         android:title="@string/settings"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/new_activity"
+        android:title="@string/new_activity"
+        app:showAsAction="never"/>
+
 </menu>
